# rust-ib

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md
.github/: dependabot.yml
migrations/: 20201004184229_create-table-posts.sql  20201005210735_create-table-boards.sql  20201005212930_alter-table-posts-fk-to-boards.sql  20201006205125_add-oppost-id-to-posts.sql  20201021172025_add-board-limits.sql  20201108190000_add-post-replies.sql
src/: main.rs
src/admin/: mod.rs  route.rs
src/boards/: model.rs  route.rs
src/middlewares/: auth.rs
src/posts/: model.rs  route.rs
src/utils/: utils.rs
